# locoia-backend-challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: prova.yml
gistapi/: gistapi.py
tests/: conftest.py  factories.py  test_gists_for_user.py  test_route_search.py  test_search_gist.py
