[tool.poetry]
name = "backend-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Simone Pedrazzi <pedra89@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.11"
flask = "^3.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
